# wildside-engine

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  Cargo.toml  Makefile  README.md  clippy.toml  rust-toolchain.toml  typos.local.toml  typos.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage-main.yml  dependabot-automerge.yml  mutation-testing.yml
cli/src/: main.rs
core/src/: lib.rs
data/src/: lib.rs
docs/: complexity-antipatterns-and-refactoring-strategies.md  developers-guide.md  documentation-style-guide.md  ortho-config-users-guide.md  reliable-testing-in-rust-via-dependency-injection.md  roadmap.md  rstest-bdd-users-guide.md  rust-testing-with-rstest-fixtures.md  srgn.md  users-guide.md  wikidata-etl-pipeline-technical-design.md  wildside-engine-design.md
docs/execplans/: phase-4-feature-flags.md
docs/wildside-engine-design/: 01-introduction.md  02-data-foundation.md  03-scoring-personalization.md  04-library-architecture.md  05-solver-implementation.md  06-implementation-testing-deployment.md  99-works-cited.md
scripts/: typos_rollout_check.py
scripts/tests/: test_typos_rollout_check.py
src/: lib.rs
tests/workflow_contracts/: mutation_testing_test.py
wildside-cli/: Cargo.toml
wildside-cli/src/: error.rs  lib.rs  main.rs  solve.rs
wildside-cli/src/tests/: feature_flag_steps.rs  feature_flags.rs  helpers.rs  mod.rs  pipeline.rs  pipeline_steps.rs  solve_steps.rs  solve_unit.rs  steps.rs  unit.rs
wildside-cli/tests/features/: feature_flags.feature  ingest_command.feature  ingest_pipeline.feature  solve_command.feature
wildside-core/: Cargo.toml
wildside-core/features/: domain.feature
wildside-core/src/: lib.rs  poi.rs  profile.rs  route.rs  scorer.rs  solver.rs  store.rs  test_support.rs  theme.rs  travel_time.rs
wildside-core/src/store/: mod.rs  spatial_index.rs  sqlite.rs
wildside-core/src/travel_time/: error.rs  mod.rs  provider.rs
wildside-core/tests/: bdd.rs  interest_profile.rs  poi_store_behaviour.rs  scorer.rs  scorer_behaviour.rs  solver_behaviour.rs  spatial_index.rs  spatial_index_behaviour.rs  sqlite_poi_store_behaviour.rs  travel_time_provider_behaviour.rs
wildside-core/tests/features/: interest_profile.feature  poi_store.feature  scorer.feature  solver.feature  spatial_index.feature  sqlite_poi_store.feature  travel_time_provider.feature
wildside-data/: Cargo.toml
wildside-data/src/: lib.rs  store.rs  tests.rs
wildside-data/src/ingest/: accumulator.rs  ids.rs  mod.rs  sqlite.rs  tags.rs
wildside-data/src/routing/: mod.rs  osrm.rs  provider.rs  test_support.rs
wildside-data/src/store/: tests.rs
wildside-data/src/wikidata/: mod.rs
wildside-data/src/wikidata/dump/: error.rs  log.rs  mod.rs  ops.rs  source.rs  test_support.rs  tests.rs  types.rs  util.rs
wildside-data/src/wikidata/dump/tests/: behaviour.rs
wildside-data/src/wikidata/etl/: mod.rs  tests.rs
wildside-data/src/wikidata/etl/tests/: behaviour.rs
wildside-data/src/wikidata/store/: mod.rs  persistence.rs  schema.rs  tests.rs
wildside-data/src/wikidata/store/tests/: behaviour.rs
wildside-data/tests/: http_travel_time_behaviour.rs  osm_ingest_behaviour.rs  support.rs  wikidata_dump_behaviour.rs
wildside-data/tests/features/: download_wikidata_dump.feature  extract_wikidata_claims.feature  http_travel_time.feature  ingest_osm_pbf.feature  persist_wikidata_claims.feature
wildside-data/tests/fixtures/: README.md  invalid.osm.pbf.b64  invalid_coords.osm.pbf.b64  poi_tags.osm.pbf.b64  triangle.osm.pbf.b64
wildside-fs/: Cargo.toml
wildside-fs/src/: lib.rs
wildside-scorer/: Cargo.toml
wildside-scorer/src/: error.rs  lib.rs  resolver.rs  tests.rs  types.rs  user.rs
wildside-scorer/tests/: popularity_behaviour.rs  user_relevance_behaviour.rs
wildside-scorer/tests/features/: popularity.feature  user_relevance.feature
wildside-solver-ortools/: Cargo.toml
wildside-solver-ortools/src/: lib.rs
wildside-solver-vrp/: Cargo.toml
wildside-solver-vrp/benches/: bench_support.rs  solver_benchmarks.rs
wildside-solver-vrp/src/: lib.rs  solver.rs  test_support.rs  vrp.rs
wildside-solver-vrp/src/solver/: mod.rs  tests.rs
wildside-solver-vrp/tests/: bench_helpers.rs  bench_helpers_behaviour.rs  bench_integration.rs  bench_setup.rs  golden_routes.rs  golden_routes_behaviour.rs  golden_routes_support.rs  property_tests.rs  proptest_support.rs  vrp_solver_behaviour.rs
wildside-solver-vrp/tests/features/: bench_helpers.feature  golden_routes.feature  vrp_solver.feature
wildside-solver-vrp/tests/golden_routes/data/: budget_constrained.json  empty_candidates.json  linear_three_poi.json  max_nodes_pruning.json  point_to_point.json  trivial_single_poi.json
