[workspace]
members = [
    "wildside-core",
    "wildside-data",
    "wildside-cli",
    "wildside-fs",
    "wildside-scorer",
    "wildside-solver-vrp",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "ISC"
repository = "https://github.com/leynos/wildside-engine"
rust-version = "1.92"

[workspace.dependencies]
wildside-core = { path = "wildside-core" }
wildside-data = { path = "wildside-data" }
wildside-scorer = { path = "wildside-scorer" }
wildside-solver-vrp = { path = "wildside-solver-vrp" }
geo = "0.31.0"
log = "0.4.22"
paste = "1"
rstest = "0.26.1"
rstest-bdd = "0.2.0"
rstest-bdd-macros = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
vrp-core = "1.25.0"
proptest = "1.5.0"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
camino = { version = "1.2.1", features = ["serde1"] }
cap-std = { version = "3.4.5", features = ["fs_utf8"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# 1. hygiene
allow_attributes                    = "deny"
allow_attributes_without_reason     = "deny"
blanket_clippy_restriction_lints    = "deny"
cognitive_complexity                = "deny"
needless_pass_by_value              = "deny"
implicit_hasher                     = "deny"

# 2. debugging leftovers
dbg_macro                           = "deny"
print_stdout                        = "deny"
print_stderr                        = "deny"

# 2. panic-prone operations
unwrap_used                         = "deny"
expect_used                         = "deny"
indexing_slicing                    = "deny"
string_slice                        = "deny"
integer_division                    = "deny"
integer_division_remainder_used     = "deny"
panic_in_result_fn                  = "deny"
unreachable                         = "deny"

# 4. portability
host_endian_bytes                   = "deny"
little_endian_bytes                 = "deny"
big_endian_bytes                    = "deny"

# 5. nursery idiom polish
let_underscore_must_use             = "deny"
or_fun_call                         = "deny"
option_if_let_else                  = "deny"
self_named_module_files             = "deny"
shadow_reuse                        = "deny"
shadow_same                         = "deny"
shadow_unrelated                    = "deny"
str_to_string                       = "deny"
string_lit_as_bytes                 = "deny"
try_err                             = "deny"
unneeded_field_pattern              = "deny"
use_self                            = "deny"

# 6. numerical foot-guns
float_arithmetic                    = "deny"
cast_possible_truncation            = "deny"
cast_possible_wrap                  = "deny"
cast_precision_loss                 = "deny"
lossy_float_literal                 = "deny"

# 7. API ergonomics
missing_const_for_fn                = "deny"
must_use_candidate                  = "deny"
unused_async                        = "deny"

# 8. Error handling
missing_panics_doc                  = "deny"
error_impl_error                    = "deny"
result_large_err                    = "deny"

[workspace.lints.rust]
unknown_lints                       = "deny"
renamed_and_removed_lints           = "deny"
missing_docs                        = "deny"

[workspace.lints.rustdoc]
missing_crate_level_docs            = "deny"
broken_intra_doc_links              = "deny"
private_intra_doc_links             = "deny"
bare_urls                           = "deny"
invalid_html_tags                   = "deny"
invalid_codeblock_attributes        = "deny"
unescaped_backticks                 = "deny"
