[package]
name = "wildside-cli"
version = "0.1.0"
edition.workspace = true
publish = false
default-run = "wildside"

[[bin]]
name = "wildside"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
eyre = "0.6"
ortho_config = "0.6.0"
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
tempfile = "3"
