[package]
name = "wildside-cli"
version = "0.1.0"
edition.workspace = true
publish = false
default-run = "wildside"

[[bin]]
name = "wildside"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
eyre = "0.6"
ortho_config = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "1.0.69"
bzip2 = "0.4"
wildside-core = { workspace = true }
wildside-data = { workspace = true }
camino = { workspace = true }
cap-std = { workspace = true }

[dev-dependencies]
base64 = "0.22"
geo = "0.31.0"
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
tempfile = "3.23.0"
