[package]
name = "wildside-core"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
geo = { workspace = true }
rstar = { version = "0.12.0" }
rusqlite = { version = "0.31.0", features = ["bundled"], optional = true }
thiserror = "1"
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
bincode = { version = "1", optional = true }

[dev-dependencies]
# Parameterised tests rely on rstest macros.
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
tempfile = "3"

[features]
default = ["serde", "store-sqlite"]
serde = ["dep:serde", "dep:serde_json", "dep:bincode", "geo/use-serde", "rstar/serde"]
store-sqlite = ["serde", "dep:rusqlite"]
test-support = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
