[package]
name = "wildside-core"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
geo = { workspace = true }
rstar = { version = "0.12.0" }
rusqlite = { workspace = true, optional = true }
thiserror = "1"
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
bincode = { version = "3", optional = true }
cap-std = { workspace = true, optional = true }

[dev-dependencies]
# Parameterised tests rely on rstest macros.
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
tempfile = "3"

[features]
default = ["serde", "store-sqlite"]
serde = ["dep:serde", "dep:serde_json", "geo/use-serde", "rstar/serde"]
store-sqlite = ["serde", "dep:bincode", "dep:cap-std", "dep:rusqlite"]
test-support = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
