[package]
name = "wildside-data"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
geo = "0.31.0"
log = { workspace = true }
osmpbf = "0.3.6"
thiserror = "1"
wildside-core = { workspace = true, features = ["serde"] }
bincode = "1.3.3"
rusqlite = { version = "0.32.1", features = ["bundled"] }

[dev-dependencies]
base64 = "0.22"
tempfile = "3.23.0"
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
