[package]
name = "wildside-data"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
geo = "0.31.0"
log = { workspace = true }
osmpbf = "0.3.6"
thiserror = "1"
wildside-core = { workspace = true }
wikidata-rust = { package = "wikidata", version = "1.1.0" }
simd-json = { version = "0.17.0", features = ["serde"] }
# Use the vendored SQLite build to guarantee consistent behaviour across CI
# and developer machines.
rusqlite = { version = "0.31.0", features = ["bundled"] }
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.49", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-util = { version = "^0.7", features = ["io-util"] }
futures-util = "^0.3"
async-trait = "^0.1"
url = "2.5.7"
tempfile = "3.23.0"

[dev-dependencies]
base64 = "0.22"
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
serde_json = "^1.0"
