[package]
name = "wildside-scorer"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
bincode = "3.0.0"
camino = { workspace = true }
rusqlite = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
wildside-core = { workspace = true }
wildside-fs = { path = "../wildside-fs" }
log = { workspace = true }

[dev-dependencies]
geo = { workspace = true }
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
tempfile = "3"

[lints]
workspace = true
